Further pixel-accuracy alignment fixes

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/_tabs.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/_tabs.scss
@@ -156,9 +156,10 @@
 			--tabbrowser-tab-color: var(--chrtheme-tab-text, var(--default-tabbrowser-tab-color)) !important;
 
 			// Fix textures being offset in Chromium Themes
-			.tab-background[selected] .tab-background-container::before {
+			.tab-background-container::before {
 				background-attachment: fixed !important;
-				background-position-y: calc(var(--tab-distance-from-top) + var(--gktabbar-y, 0px) - 1px) !important; // -1px counters the margin-block-end
+				background-position-y: calc(var(--tab-distance-from-top) + var(--gktabbar-y, 0px) + 1px) !important;
+				background-position-x: 1px !important;
 			}
 		}
 	}
