--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/_toolbars.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/_toolbars.scss
@@ -693,7 +693,8 @@
 			#nav-bar,
 			#PersonalToolbar {
 				background-attachment: fixed !important;
-				background-position-y: calc(var(--tab-distance-from-top) + var(--gktabbar-y, 0px)) !important;
+				background-position-y: calc(var(--tab-distance-from-top) + var(--gktabbar-y, 0px) + 1px) !important;
+				background-position-x: 1px !important;
 			}
 		}
 	}
